; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/synth/extr_util_mem.c_snd_util_memhdr_new.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/synth/extr_util_mem.c_snd_util_memhdr_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_util_memhdr = type { i32, i32, i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.snd_util_memhdr* @snd_util_memhdr_new(i32 %0) #0 {
  %2 = alloca %struct.snd_util_memhdr*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.snd_util_memhdr*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* @GFP_KERNEL, align 4
  %6 = call %struct.snd_util_memhdr* @kzalloc(i32 12, i32 %5)
  store %struct.snd_util_memhdr* %6, %struct.snd_util_memhdr** %4, align 8
  %7 = load %struct.snd_util_memhdr*, %struct.snd_util_memhdr** %4, align 8
  %8 = icmp eq %struct.snd_util_memhdr* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store %struct.snd_util_memhdr* null, %struct.snd_util_memhdr** %2, align 8
  br label %21

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  %12 = load %struct.snd_util_memhdr*, %struct.snd_util_memhdr** %4, align 8
  %13 = getelementptr inbounds %struct.snd_util_memhdr, %struct.snd_util_memhdr* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 4
  %14 = load %struct.snd_util_memhdr*, %struct.snd_util_memhdr** %4, align 8
  %15 = getelementptr inbounds %struct.snd_util_memhdr, %struct.snd_util_memhdr* %14, i32 0, i32 2
  %16 = call i32 @mutex_init(i32* %15)
  %17 = load %struct.snd_util_memhdr*, %struct.snd_util_memhdr** %4, align 8
  %18 = getelementptr inbounds %struct.snd_util_memhdr, %struct.snd_util_memhdr* %17, i32 0, i32 1
  %19 = call i32 @INIT_LIST_HEAD(i32* %18)
  %20 = load %struct.snd_util_memhdr*, %struct.snd_util_memhdr** %4, align 8
  store %struct.snd_util_memhdr* %20, %struct.snd_util_memhdr** %2, align 8
  br label %21

21:                                               ; preds = %10, %9
  %22 = load %struct.snd_util_memhdr*, %struct.snd_util_memhdr** %2, align 8
  ret %struct.snd_util_memhdr* %22
}

declare dso_local %struct.snd_util_memhdr* @kzalloc(i32, i32) #1

declare dso_local i32 @mutex_init(i32*) #1

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
